26.1.2012
- author name in subject of email notification
- script version in email notification
- email notification also if script is edited or deleted


*******************************
1.4.3 Release Notes (25.1.2012)

There are several new improvements in this release:
 - deltasql server is able to notify users by email if a new script is inserted in deltasql. This feature is important to
  slowly migrate users from the manual synchronization burden to the deltasql way of life.
 - Users can define preferences: if help links are shown, if rows are colored. The number of scripts shown in the list script
   page is configurable as well.
 - Minor visual enhancements 
 - Minor bugfixes

*******************************

23-25.1.2012 git
- Testing and debugging the new release

13.1.2012 git
- email notification for new scripts works both under Linux and Windows :-D
- added FAQ entry on how to configure email notification for new scripts

12.1.2012 git
- towards the implementation of email notification for new scripts

11.1.2012 git
- created configuration to enable/disable emails. Users can choose in preferences.php if they want to be notified by email.

9.1.2012 git
- implemented user preferences for scripts per page, display help links and color new rows

6.1.2012 git
- bugfix: in some mysql versions, deltasql was not searching for the modified scripts, when the option was set
- bugfix: package and view detection on lowercase + undefined index errors on this page
- preparing utils.inc.php to handle new column in tbparameter, refactoring code a bit

5.1.2012 git
- preparing datamodel to accept usersettings (added user_id column to tbparameter)
- more updates on footers

4.1.2012 git
- updating footers to be consistent
- spreading help links to topics overall over deltasql server

2.1.2012 git
- deltasql reports an error when trying to submit a script with no modules defined (happens when deltasql is freshly installed).
- fixing minor bug on login screen
